compiler/typ/tests/fixtures/diagnostics/0333_fun_self_application_10.ml.infer.expected
File "0333_fun_self_application_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0333_fun_self_application_10 is not a valid module name.

File "0333_fun_self_application_10.ml", line 1, characters 20-21:
1 | let bad_kappa x = x x
                        ^
Error: The value x has type 'a -> 'b but an expression was expected of type
         'a
       The type variable 'a occurs inside 'a -> 'b
