compiler/typ/tests/fixtures/diagnostics/0333_fun_self_application_10.ml
let bad_kappa x = x x
